traversal.snake.Snake.scala.error
Compilation error:
Snake:14: error: Boolean(true) does not take parameters
        res=true()
                ^Snake:25: warning: enclosing method fonctionTest has result type Unit: return value discarded
  return res
  ^